# cabotisocks

./: CMakeLists.txt  README.md
.github/: build_libbpf.sh
.github/loongarch64/: ptrace.h
.github/riscv64/: ptrace.h
.github/workflows/: build.yml  release.yml
bpf/: caboti.bpf.c  caboti.bpf.h
cmake/: FindBpfObject.cmake
config/: config.example.json  config.schema.json
src/: .clang-format  cabotisocks.cpp  cabotisocks.hpp  main.cpp  rule.cpp  rule.hpp  socks.cpp  socks.hpp  tcp_relay.cpp  tcp_relay.hpp  udp_relay.cpp  udp_relay.hpp
